fix: Trono template - more aggressive drop cap spacing
- Increased first word padding: 1.5vw top, added margin-left: 1vw, margin-top: 0.5vw
- More aggressive drop cap margins: margin-top: -1vw, margin-left: -1.5vw
- Added position: relative and z-index to both word and first-letter
- Adjusted line-height to 0.9 for better vertical alignment

--- a/src/pycaps/template/preset/trono/styles.css
+++ b/src/pycaps/template/preset/trono/styles.css
@@ -36,12 +36,15 @@
     display: inline-block;
     line-height: 1.2;
     overflow: visible;
+    position: relative;
 }
 
 /* First word needs extra padding for drop cap */
 .word.first-word-in-segment {
-    padding: 1vw 0.4vw 0.6vw 0.4vw;
+    padding: 1.5vw 0.4vw 0.6vw 0.4vw;
     overflow: visible;
+    margin-left: 1vw;
+    margin-top: 0.5vw;
 }
 
 /* First letter of first word - DROP CAP with WrathStyles */
@@ -49,10 +52,10 @@
     font-family: 'WrathStyles', serif;
     font-size: 12vw;
     float: left;
-    line-height: 1;
-    margin-right: 0.3vw;
-    margin-top: -0.5vw;
-    margin-left: -0.3vw;
+    line-height: 0.9;
+    margin-right: 0.4vw;
+    margin-top: -1vw;
+    margin-left: -1.5vw;
     color: white;
     text-transform: uppercase;
     /* Enhanced black border for drop cap */
@@ -68,6 +71,8 @@
         0 0.5vw 1vw rgba(0, 0, 0, 0.95);
     display: inline-block;
     overflow: visible;
+    position: relative;
+    z-index: 1;
 }
 
 /* Word narration states */
